# FreeCaster

./: .gitignore  AIRPLAY_AUTHENTICATION.md  AIRPLAY_AUTH_FIXES.md  ALAC_IMPLEMENTATION.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTHENTICATION_QUICK_START.md  BUILD.md  BUILD_SUCCESS.md  CI_QUICK_REFERENCE.md  CI_TESTING_SETUP.md  CMakeLists.txt  CURRENT_STATUS.md  ERROR_HANDLING_IMPROVEMENTS.md  GIT_SETUP.md  IMPLEMENTATION_SUMMARY.md  ISSUE_26_PROGRESS.md  ISSUE_FRE-3_RESOLUTION.md  LICENSE  MACOS_BUILD_FIX.md  MDNS_DISCOVERY_IMPLEMENTATION.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  RTP_IMPLEMENTATION.md  TESTING_FRAMEWORK_SUMMARY.md  TESTING_GUIDE.md  TEST_AIRPLAY.md  USER_GUIDE.md  automated_airplay_test.py  build.bat  build.sh  entitlements.plist  release.sh  test_airplay_connections.sh  test_airplay_devices.sh  test_log.txt  test_plugin.py
.github/workflows/: build.yml  release.yml
Source/: JuceHeader.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AirPlay/: AirPlayAuth.cpp  AirPlayAuth.h  AirPlayLinux.cpp  AirPlayLinux.h  AirPlayMac.h  AirPlayMac.mm  AirPlayManager.cpp  AirPlayManager.h  AirPlayWindows.cpp  AirPlayWindows.h  RaopClient.cpp  RaopClient.h
Source/Audio/: ALACEncoderWrapper.cpp  ALACEncoderWrapper.h  AudioEncoder.cpp  AudioEncoder.h  StreamBuffer.cpp  StreamBuffer.h
Source/Discovery/: AirPlayDevice.cpp  AirPlayDevice.h  DeviceDiscovery.cpp  DeviceDiscovery.h  DeviceDiscoveryLinux.cpp  DeviceDiscoveryMac.mm  DeviceDiscoveryPlatform.h  DeviceDiscoveryWindows.cpp
Tests/: AirPlayDeviceTests.cpp  AudioEncoderTests.cpp  ErrorHandlingTests.cpp  README.md  RaopClientTests.cpp  StreamBufferTests.cpp  TestMain.cpp
